fix: Aligned Portfolio subtitle text to be under title text. Cleaned up resumeBuilder.js file

--- a/css/resume-css.css
+++ b/css/resume-css.css
@@ -195,6 +195,14 @@ html,body {
 	transform: translateY(-50%);
 }
 
+.caption p {
+	position: relative;
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
 /* Map Properties */
 #map {
 	display: block;
